--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,127 +1,288 @@
 # syntax=docker/dockerfile:1.7
 
-# Multi-stage build for better caching and smaller final image
-FROM mcr.microsoft.com/vscode/devcontainers/base:ubuntu-24.04 AS base-deps
+# Multi-stage build for CUDA-enabled PyTorch development environment
+# Uses NVIDIA CUDA 12.4 runtime with optimized layer caching
 
-# Build arguments for cache control
+# ==============================================================================
+# CUDA Base Stage - NVIDIA CUDA runtime with development tools
+# ==============================================================================
+FROM nvidia/cuda:12.4-cudnn8-devel-ubuntu24.04 AS cuda-base
+
+# Build arguments for cache control and versioning
 ARG BUILDKIT_INLINE_CACHE=1
 ARG PYTHON_VERSION=3.12
+ARG CUDA_VERSION=12.4
+ARG APP_USER=vscode
+ARG APP_UID=1000
+ARG APP_GID=1000
 
-# Environment setup - consolidated for better layer caching
+# CUDA and system environment setup
 ENV DEBIAN_FRONTEND=noninteractive \
-    PYTHONDONTWRITEBYTECODE=1 \
-    PYTHONUNBUFFERED=1 \
-    PYTHONFAULTHANDLER=1 \
-    PYTHONHASHSEED=random \
-    PIP_NO_CACHE_DIR=1 \
-    PIP_DISABLE_PIP_VERSION_CHECK=1 \
-    UV_INSTALL_DIR=/usr/local/bin \
+    CUDA_VERSION=${CUDA_VERSION} \
+    CUDA_HOME=/usr/local/cuda \
+    CUDA_ROOT=/usr/local/cuda \
+    PATH=/usr/local/cuda/bin:${PATH} \
+    LD_LIBRARY_PATH=/usr/local/cuda/lib64:/usr/local/cuda/compat:${LD_LIBRARY_PATH} \
+    LIBRARY_PATH=/usr/local/cuda/lib64/stubs:${LIBRARY_PATH} \
+    NVIDIA_VISIBLE_DEVICES=all \
+    NVIDIA_DRIVER_CAPABILITIES=compute,utility \
+    NVIDIA_REQUIRE_CUDA="cuda>=12.4" \
     LANG=C.UTF-8 \
     LC_ALL=C.UTF-8
 
-# System dependencies - optimized layer with cleanup
+# Verify CUDA installation and create symlinks
+RUN ln -sf /usr/local/cuda-12.4 /usr/local/cuda && \
+    echo "/usr/local/cuda/lib64" >> /etc/ld.so.conf.d/cuda.conf && \
+    echo "/usr/local/cuda/compat" >> /etc/ld.so.conf.d/cuda.conf && \
+    ldconfig && \
+    # Verify CUDA installation
+    nvcc --version || echo "Warning: nvcc not found" && \
+    ls -la /usr/local/cuda/lib64/libcudart* || echo "Warning: CUDA runtime not found"
+
+# ==============================================================================
+# System Dependencies Stage - Essential tools and libraries
+# ==============================================================================
+FROM cuda-base AS system-deps
+
+# System package installation with optimized caching
 RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
     --mount=type=cache,target=/var/lib/apt,sharing=locked \
     apt-get update && apt-get install -y --no-install-recommends \
-    # Essential tools
-    ca-certificates curl git git-lfs wget \
-    # Build tools (minimal set)
-    build-essential pkg-config \
+    # Essential development tools
+    ca-certificates curl git git-lfs wget unzip \
+    # Build essentials for Python packages
+    build-essential pkg-config cmake ninja-build \
+    # System libraries commonly needed by ML packages
+    libjpeg-dev libpng-dev libtiff-dev \
+    libavcodec-dev libavformat-dev libswscale-dev \
+    libgtk-3-dev libcanberra-gtk3-dev \
+    # Audio processing libraries
+    libsndfile1-dev libsox-dev \
     # SSH and process management
-    openssh-client tini \
-    # Performance tools
-    htop iotop \
+    openssh-client tini sudo \
+    # Performance monitoring tools
+    htop iotop nvtop \
+    # Math libraries
     bc \
     # Cleanup in same layer
     && rm -rf /var/lib/apt/lists/* \
     && git lfs install --system
 
-# Install uv
-RUN --mount=type=cache,target=/home/vscode/.cache/uv,uid=1000 \
-    curl -LsSf https://astral.sh/uv/install.sh | sh \
-    && uv --version
+# ==============================================================================
+# User Setup Stage - Create non-root user with proper permissions
+# ==============================================================================
+FROM system-deps AS user-setup
 
-# User setup
-ARG APP_USER=vscode
-ENV HOME=/home/${APP_USER}
+# Create user with same UID/GID as host user for seamless file permissions
+RUN groupadd -g ${APP_GID} ${APP_USER} && \
+    useradd -m -u ${APP_UID} -g ${APP_GID} -s /bin/bash ${APP_USER} && \
+    # Add user to sudo group for container admin tasks
+    usermod -aG sudo ${APP_USER} && \
+    # Allow passwordless sudo for convenience in dev environment
+    echo "${APP_USER} ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers && \
+    # Create all necessary directories with proper ownership
+    mkdir -p \
+    /home/${APP_USER}/.cache/huggingface \
+    /home/${APP_USER}/.cache/torch \
+    /home/${APP_USER}/.cache/uv \
+    /home/${APP_USER}/.cache/pip \
+    /home/${APP_USER}/.kaggle \
+    /home/${APP_USER}/.local/bin \
+    /workspaces \
+    /workspaces/data && \
+    # Set ownership for all user directories
+    chown -R ${APP_USER}:${APP_USER} /home/${APP_USER} /workspaces
 
-# Create all directories in single layer
-RUN mkdir -p \
-    ${HOME}/.cache/huggingface \
-    ${HOME}/.cache/torch \
-    ${HOME}/.cache/uv \
-    ${HOME}/.kaggle \
-    /workspaces/data \
-    && chown -R ${APP_USER}:${APP_USER} ${HOME} /workspaces
+# ==============================================================================
+# UV Package Manager Stage - Install UV with optimized caching
+# ==============================================================================
+FROM user-setup AS uv-install
 
-# Switch to user early
+# Switch to non-root user
 USER ${APP_USER}
+ENV HOME=/home/${APP_USER}
 WORKDIR /workspaces
 
-# Python environment setup stage
-FROM base-deps AS python-env
-
-# UV configuration for performance
-ENV UV_LINK_MODE=copy \
+# UV installation and configuration
+ENV UV_INSTALL_DIR=/home/${APP_USER}/.local/bin \
+    UV_LINK_MODE=copy \
     UV_COMPILE_BYTECODE=1 \
-    UV_PYTHON_DOWNLOADS=manual
+    UV_PYTHON_DOWNLOADS=manual \
+    UV_CONCURRENT_DOWNLOADS=10 \
+    UV_HTTP_TIMEOUT=300 \
+    PATH=/home/${APP_USER}/.local/bin:${PATH}
 
-# Install Python with cache
-RUN --mount=type=cache,target=/home/vscode/.cache/uv,uid=1000 \
-    uv python install ${PYTHON_VERSION}
+# Install UV with cache mounting for faster rebuilds
+RUN --mount=type=cache,target=/home/${APP_USER}/.cache/uv,uid=${APP_UID},gid=${APP_GID} \
+    curl -LsSf https://astral.sh/uv/install.sh | sh && \
+    uv --version
 
-# Dependency installation stage
+# ==============================================================================
+# Python Environment Stage - Install Python and create virtual environment
+# ==============================================================================
+FROM uv-install AS python-env
+
+# Python performance environment variables
+ENV PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1 \
+    PYTHONFAULTHANDLER=1 \
+    PYTHONHASHSEED=random \
+    PIP_NO_CACHE_DIR=1 \
+    PIP_DISABLE_PIP_VERSION_CHECK=1
+
+# Install Python with UV and create virtual environment
+RUN --mount=type=cache,target=/home/${APP_USER}/.cache/uv,uid=${APP_UID},gid=${APP_GID} \
+    uv python install ${PYTHON_VERSION} && \
+    uv venv --clear .venv -p ${PYTHON_VERSION} && \
+    echo "source /workspaces/.venv/bin/activate" >> ~/.bashrc
+
+# ==============================================================================
+# Dependencies Installation Stage - Install all Python packages
+# ==============================================================================
 FROM python-env AS deps-install
 
-# Copy dependency files first (better caching)
-COPY --chown=${APP_USER}:${APP_USER} pyproject.toml uv.lock ./
+# Copy dependency files first for better Docker layer caching
+COPY --chown=${APP_USER}:${APP_USER} pyproject.toml uv.lock* ./
 
-# Create venv and install dependencies with cache mounting
-RUN --mount=type=cache,target=/home/vscode/.cache/uv,uid=1000 \
-    uv venv --clear .venv -p ${PYTHON_VERSION} \
-    && . .venv/bin/activate \
-    && uv sync \
+# Install dependencies with comprehensive extras and cache mounting
+RUN --mount=type=cache,target=/home/${APP_USER}/.cache/uv,uid=${APP_UID},gid=${APP_GID} \
+    . .venv/bin/activate && \
+    uv sync \
     --no-install-project \
     --index-strategy unsafe-best-match \
     --extra dev \
     --extra notebook \
     --extra torch-cu124 \
-    --compile-bytecode \
-    && echo "External dependencies installed"
+    --extra datascience \
+    --extra tracking \
+    --extra profiling \
+    --compile-bytecode && \
+    # Verify PyTorch CUDA installation
+    python -c "import torch; print(f'PyTorch {torch.__version__} with CUDA {torch.version.cuda}')" && \
+    python -c "import torch; print(f'CUDA available: {torch.cuda.is_available()}')" || echo "CUDA check will complete at runtime" && \
+    echo "Dependencies installed successfully"
 
-# Final stage - minimal layers for runtime
-FROM deps-install AS final
+# ==============================================================================
+# ML Libraries Verification Stage - Test critical imports
+# ==============================================================================
+FROM deps-install AS ml-verify
 
-# Copy source code (separate layer for development)
+# Verify all critical ML libraries can be imported
+RUN . .venv/bin/activate && python -c "
+import sys
+print('Verifying ML library installations...')
+
+# Core libraries
+import numpy as np
+print(f'✓ NumPy {np.__version__}')
+
+import pandas as pd
+print(f'✓ Pandas {pd.__version__}')
+
+import sklearn
+print(f'✓ Scikit-learn {sklearn.__version__}')
+
+# PyTorch ecosystem
+import torch
+print(f'✓ PyTorch {torch.__version__}')
+print(f'  - CUDA compiled: {torch.version.cuda or \"No\"}')
+print(f'  - CUDA available: {torch.cuda.is_available()}')
+
+try:
+import torchvision
+print(f'✓ TorchVision {torchvision.__version__}')
+except ImportError:
+print('⚠ TorchVision not available')
+
+try:
+import torchaudio  
+print(f'✓ TorchAudio {torchaudio.__version__}')
+except ImportError:
+print('⚠ TorchAudio not available')
+
+# Transformers ecosystem
+try:
+import transformers
+print(f'✓ Transformers {transformers.__version__}')
+except ImportError:
+print('⚠ Transformers not available')
+
+try:
+import datasets
+print(f'✓ Datasets {datasets.__version__}')
+except ImportError:
+print('⚠ Datasets not available')
+
+# Visualization
+import matplotlib
+print(f'✓ Matplotlib {matplotlib.__version__}')
+
+print('Library verification completed!')
+"
+
+# ==============================================================================
+# Final Application Stage - Install project and setup runtime
+# ==============================================================================
+FROM ml-verify AS final
+
+# Copy entire project (this layer will change frequently during development)
 COPY --chown=${APP_USER}:${APP_USER} . .
 
-# Install project and setup Jupyter kernel in single layer
-RUN . .venv/bin/activate \
-    && uv pip install -e . --compile-bytecode \
-    && python -m ipykernel install --user \
+# Install project in development mode and setup Jupyter kernel
+RUN . .venv/bin/activate && \
+    uv pip install -e . --compile-bytecode && \
+    # Setup Jupyter kernel with project name
+    python -m ipykernel install --user \
     --name torch_starter-${PYTHON_VERSION} \
-    --display-name "Python ${PYTHON_VERSION} (torch_starter)" \
-    && echo "Project setup completed"
+    --display-name "Python ${PYTHON_VERSION} (torch_starter)" && \
+    # Create useful development symlinks
+    ln -sf /workspaces/data /home/${APP_USER}/data && \
+    ln -sf /workspaces/notebooks /home/${APP_USER}/notebooks && \
+    echo "Project setup completed"
 
-# Quick validation (non-blocking)
-RUN . .venv/bin/activate \
-    && python -c "import sys; print(f'Python {sys.version}')" \
-    && python -c "import torch; print(f'PyTorch {torch.__version__}')" \
-    && python -c "import transformers; print(f'Transformers {transformers.__version__}')" \
-    || echo "Warning: Some packages may not be available"
+# ==============================================================================
+# Runtime Configuration and Health Checks
+# ==============================================================================
 
-# Runtime configuration
-EXPOSE 8888 8000 6006
+# Expose common development ports
+EXPOSE 8888 8000 6006 7860
 
-# Health check
-HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-    CMD python -c "import torch" || exit 1
+# Comprehensive health check that verifies CUDA functionality
+HEALTHCHECK --interval=60s --timeout=10s --start-period=30s --retries=3 \
+    CMD . .venv/bin/activate && python -c " \
+    import torch; \
+    print(f'Health check: PyTorch {torch.__version__}'); \
+    print(f'CUDA available: {torch.cuda.is_available()}'); \
+    exit(0)" || exit 1
 
-# Optimized entrypoint
+# Set up container entrypoint with proper signal handling
 ENTRYPOINT ["/usr/bin/tini", "--"]
 CMD ["/bin/bash", "-l"]
 
-# Labels for better organization
-LABEL org.opencontainers.image.title="torch_starter"
-LABEL org.opencontainers.image.description="Optimized PyTorch development environment"
-LABEL org.opencontainers.image.version="2.0-optimized"
+# ==============================================================================
+# Metadata and Labels
+# ==============================================================================
+LABEL org.opencontainers.image.title="torch_starter" \
+    org.opencontainers.image.description="CUDA-enabled PyTorch development environment with Python 3.12" \
+    org.opencontainers.image.version="2.1-cuda12.4" \
+    org.opencontainers.image.vendor="PyTorch DevContainer" \
+    org.opencontainers.image.licenses="MIT" \
+    cuda.version="12.4" \
+    pytorch.version=">=2.4.0" \
+    python.version="3.12"
+
+# Development environment hints for better IDE integration
+ENV PYTHONPATH=/workspaces:${PYTHONPATH} \
+    JUPYTER_ENABLE_LAB=yes \
+    JUPYTER_TOKEN="" \
+    # Cache locations
+    HF_HOME=/home/${APP_USER}/.cache/huggingface \
+    TRANSFORMERS_CACHE=/home/${APP_USER}/.cache/huggingface \
+    TORCH_HOME=/home/${APP_USER}/.cache/torch \
+    KAGGLE_CONFIG_DIR=/home/${APP_USER}/.kaggle \
+    # Performance optimizations
+    OMP_NUM_THREADS=4 \
+    MKL_NUM_THREADS=4 \
+    OPENBLAS_NUM_THREADS=4 \
+    NUMEXPR_NUM_THREADS=4 \
+    TORCH_NUM_THREADS=4
